...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Remote Control" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CKq-at-BB8">
                                <rect key="frame" x="75" y="308" width="251" height="33"/>
                                <constraints>
...
                                <rect key="frame" x="16" y="75" width="361" height="210"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My DVR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Agr-yz-AzK">
                                        <rect key="frame" x="51" y="94" width="73" height="24"/>
                                        <constraints>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DVR Power:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SBk-LF-BTO">
                                        <rect key="frame" x="157" y="37" width="129" height="21"/>
                                        <constraints>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="State:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5BK-Rv-bPc">
                                        <rect key="frame" x="156.66666666666666" y="95" width="48" height="21"/>
                                        <constraints>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Az-wc-kG0">
                                        <rect key="frame" x="272" y="37" width="81" height="21"/>
                                        <accessibility key="accessibilityConfiguration" identifier="DVR_Power_Value"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="81" id="b9T-c9-aG2"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7iW-ce-qZ5">
                                        <rect key="frame" x="213" y="96" width="140" height="21"/>
                                        <accessibility key="accessibilityConfiguration" identifier="DVR_State_Value"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="21" id="10S-Ze-C9G"/>
...
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DVR Remote Control" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfv-k5-saS">
                                <rect key="frame" x="66" y="307" width="261" height="33.666666666666686"/>
                                <constraints>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Power:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hgj-5x-J25">
                                <rect key="frame" x="16" y="382" width="52" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Po7-XF-LJ7">
                                <rect key="frame" x="328" y="377" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="DVR_Power_Switch"/>
                                <color key="onTintColor" systemColor="systemTealColor"/>
                                <connections>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="gray" title="Play">
                                    <color key="baseForegroundColor" systemColor="systemTealColor"/>
                                    <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="gray" title="Pause">
                                    <color key="baseForegroundColor" systemColor="systemTealColor"/>
                                    <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="gray" title="Stop">
                                    <color key="baseForegroundColor" systemColor="systemTealColor"/>
                                    <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="gray" title="Fast Rewind">
                                    <color key="baseForegroundColor" systemColor="systemTealColor"/>
                                    <color key="baseBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <state key="normal" title="Button"/>
